kubernetes/client-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: flaskvue
    tier: client
spec:
  replicas: 4
  selector:
    matchLabels:
      tier: client
  template:
    metadata:
      name: client-pod
      labels:
        app: flaskvue
        tier: client
    spec:
      containers:
        - name: client-container
          image: zozoh94/flask-vue-client:v1.1
