kubernetes/server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: flaskvue
    tier: server
spec:
  replicas: 4
  selector:
    matchLabels:
      tier: server
  template:
    metadata:
      name: server-pod
      labels:
        app: flaskvue
        tier: server
    spec:
      containers:
        - name: server-container
          image: zozoh94/flask-vue-server:v1.1
