kubernetes/client-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  labels:
    app: flaskvue
spec:
  selector:
    tier: client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
