kubernetes/db-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    app: flaskvue
spec:
  selector:
    tier: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
