kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: flask.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client-service
              port:
                number: 80
        - path: /books
          pathType: Prefix
          backend:
            service:
              name: server-service
              port:
                number: 80
